<resources>
    <string name="app_name">MoTo</string>
    <string name="app_name2">Mo To</string>

    <string name="image_load_fail">사진을 가져오는데 실패했습니다</string>
    <string name="upload_fail">업로드에 실패했습니다</string>
    <string name="post_delete_success">게시글을 삭제하였습니다</string>
    <string name="post_delete_fail">게시글을 삭제하지 못하였습니다</string>
    <string name="wrong_access">잘못된 접근입니다</string>
    <string name="upload_success">게시글이 업로드되었습니다</string>
    <string name="please_give_permission">권한을 허용해주세요</string>
    <string name="back_pressed_prevent_in_write_post">작성중인 글은 저장되지 않습니다</string>


    <string name="update_note">업데이트 노트</string>
    <string name="improvement">추후 개선사항</string>
    <string name="related_link">관련 링크</string>
    <string name="please_project_name">프로젝트의 이름을 알려주세요!</string>
    <string name="please_project_two_line_description">프로젝트에 대한 간략하게 설명해주세요!</string>
    <string name="please_project_description">프로젝트에 대해 자유롭게 설명해주세요!!</string>
    <string name="please_project_update_note">프로젝트가 어떻게 변해왔는지를 알려주세요!</string>
    <string name="please_project_improvement">이 프로젝트는 앞으로 어떻게 변해갈 예정인가요?</string>
    <string name="please_related_link_name">어떤 링크인가요?</string>
    <string name="please_related_link_address">http까지 포함한 링크 주소를 알려주세요</string>
    <string name="add_related_link">링크 추가</string>
    
    
    <string name="notice_max_images_count">사진은 10장까지 선택 가능합니다</string>

</resources>