<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="40dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/writePostMainImage"
                        android:background="@color/gray_shadow"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintDimensionRatio="W,1:1"
                        tools:ignore="MissingConstraints" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:text="게시판에서 보이게 될 메인 이미지입니다"
                    android:layout_marginTop="4dp"
                    android:layout_gravity="right"
                    android:fontFamily="@font/nanum_myeongjo"
                    android:textColor="@color/gray_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <ImageView
                android:background="@color/gray_shadow"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <LinearLayout
                android:layout_marginTop="16dp"
                android:padding="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/writePostProjectTitleEditText"
                    android:fontFamily="@font/bm_jua"
                    android:textSize="28sp"
                    android:textColor="@color/black"
                    android:hint="@string/please_project_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/writePostTwoLineDescriptionEditText"
                    android:fontFamily="@font/nanum_myeongjo"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:hint="@string/please_project_two_line_description"
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/writePostImagesSlider"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@color/gray_shadow"
                    app:sliderIndicatorGravity="center_horizontal|bottom"
                    app:sliderIndicatorMargin="15dp"
                    app:sliderIndicatorOrientation="horizontal"
                    app:sliderIndicatorPadding="3dp"
                    app:sliderIndicatorRadius="2dp"
                    app:sliderIndicatorSelectedColor="#5A5A5A"
                    app:sliderIndicatorUnselectedColor="#FFF"
                    tools:ignore="MissingConstraints"
                    app:layout_constraintDimensionRatio="W,1:1" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/writePostImageAddFloatingButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:foreground="@drawable/ic_baseline_add_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:borderWidth="0dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginRight="16dp"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_marginTop="16dp"
                android:padding="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/writePostDescriptionEditText"
                    android:hint="@string/please_project_description"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:fontFamily="@font/nanum_myeongjo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/update_note"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:fontFamily="@font/bm_jua"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/writePostUpdateNoteEditText"
                    android:hint="@string/please_project_update_note"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:fontFamily="@font/nanum_myeongjo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/improvement"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:fontFamily="@font/bm_jua"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/writePostImprovementEditText"
                    android:hint="@string/please_project_improvement"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:fontFamily="@font/nanum_myeongjo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/related_link"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:fontFamily="@font/bm_jua"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:id="@+id/writePostRelatedLinkContentLayout"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </LinearLayout>

                <TextView
                    android:id="@+id/addRelatedLinkButton"
                    android:fontFamily="@font/nanum_myeongjo"
                    android:text="@string/add_related_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/submitPost"
                    android:layout_gravity="right"
                    android:fontFamily="@font/bm_jua"
                    android:textColor="@color/black"
                    android:text="작성 완료"
                    android:backgroundTint="@color/orange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>